--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="Images/Tree Logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="Styles/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -212,6 +213,22 @@
           </div>
         </div>
       </nav>
+      <section class="bg-[#cff0dc]">
+        <div class="max-w-7xl mx-auto py-13 text-center hero-bg sm:py-25">
+          <h1 class="text-[23px] font-bold sm:text-5xl">
+            Plant a Tree, Grow a Future
+          </h1>
+          <p class="text-[13px] py-3 w-[75%] mx-auto sm:text-base sm:w-[40%]">
+            Join our mission to plant 1 million trees and make the Earth greener
+            for future generations.
+          </p>
+          <button
+            class="mt-3 btn rounded-3xl border-none text-[#15803D] bg-[#FACC15] active:bg-[#FDE68A]"
+          >
+            Get Involved
+          </button>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
