Completed Campaign, Impact & Plant a Tree Section

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <main class="bg-[#f0fdf4]">
       <section class="max-w-7xl mx-auto py-9 w-[97%] sm:py-20">
         <h1
-          class="text-center font-semibold text-xl mb-5 sm:text-[27px] sm:mb-11"
+          class="text-center font-semibold text-xl mb-7 sm:text-[27px] sm:mb-11"
         >
           Choose Your Trees
         </h1>
@@ -411,8 +411,113 @@
           </div>
         </div>
       </section>
+      <section class="max-w-4xl mx-auto pb-9 w-[97%] sm:pb-20">
+        <h1
+          class="text-center font-semibold text-xl mb-7 sm:text-[27px] sm:mb-11"
+        >
+          About the Campaign
+        </h1>
+        <div
+          class="w-[95%] mx-auto flex flex-col gap-5 sm:w-[100%] sm:gap-9 sm:flex-row sm:items-center"
+        >
+          <div class="flex-1">
+            <img src="Images/About.png" alt="" />
+          </div>
+          <div class="flex-1 text-[#1f2937] text-justify">
+            <p>
+              Green Earth is a global tree plantation initiative dedicated to
+              fighting climate change. Since our start, we’ve planted over
+              500,000 trees worldwide. By joining our campaign, you help restore
+              forests, create habitats for wildlife, and combat global warming.
+            </p>
+            <ul class="list-disc pt-3 pl-7">
+              <li>Restoration of natural habitats</li>
+              <li>Improvement of air quality</li>
+              <li>Support for local communities</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="bg-[#cff0dc] pb-9 sm:pb-20">
+        <div class="max-w-7xl mx-auto w-[90%]">
+          <h1
+            class="text-center font-semibold text-xl pt-9 mb-7 sm:text-[27px] sm:pt-20 sm:mb-11"
+          >
+            Our Impact
+          </h1>
+          <div class="grid grid-cols-1 gap-5 sm:grid-cols-3">
+            <div
+              class="bg-white py-7 text-center rounded-xl sm:py-10 sm:rounded-2xl"
+            >
+              <h5 class="text-[#15803d] text-2xl font-semibold sm:text-3xl">
+                500K+
+              </h5>
+              <p class="text-[13px] mt-3 sm:text-base">Trees Planted</p>
+            </div>
+            <div
+              class="bg-white py-7 text-center rounded-xl sm:py-10 sm:rounded-2xl"
+            >
+              <h5 class="text-[#15803d] text-2xl font-semibold sm:text-3xl">
+                120+
+              </h5>
+              <p class="text-[13px] mt-3 sm:text-base">Communities Involved</p>
+            </div>
+            <div
+              class="bg-white py-7 text-center rounded-xl sm:py-10 sm:rounded-2xl"
+            >
+              <h5 class="text-[#15803d] text-2xl font-semibold sm:text-3xl">
+                30+
+              </h5>
+              <p class="text-[13px] mt-3 sm:text-base">Countries Reached</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="bg-[#166534] pb-9 sm:pb-20">
+        <h1
+          class="text-center text-white font-semibold text-xl pt-9 mb-7 sm:text-[27px] sm:pt-20 sm:mb-11"
+        >
+          Plant a Tree Today
+        </h1>
+        <form
+          class="bg-[#15803d] max-w-xl w-[90%] mx-auto p-5 rounded-xl flex flex-col gap-3 sm:w-[97%] sm:p-10"
+        >
+          <input
+            type="text"
+            placeholder="Your Name"
+            class="input w-full rounded-xl focus:outline-none"
+          />
+          <input
+            type="email"
+            placeholder="Your Email Address"
+            class="input w-full rounded-xl focus:outline-none"
+          />
+          <select
+            class="select w-full rounded-xl"
+            style="outline: none !important"
+          >
+            <option disabled selected>Number of Trees</option>
+            <option>1 Tree - $5</option>
+            <option>5 Tree - $25</option>
+            <option>10 Tree - $50</option>
+            <option>15 Tree - $75</option>
+            <option>20 Tree - $100</option>
+          </select>
+          <input
+            class="btn rounded-xl bg-[#FACC15] text-[#15803d] border-none active:bg-[#FDE68A]"
+            type="submit"
+            value="Donate Now"
+          />
+        </form>
+      </section>
+      <section class="bg-[#14532d]">
+        <div class="text-white text-center py-3 sm:py-5">
+          <small>© 2025 Green Earth. All Rights Reserved.</small>
+        </div>
+      </section>
+    </footer>
     <script src="JS/script.js"></script>
   </body>
 </html>
