Worked On Functionality Part

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 >
                   <i class="fa-solid fa-cart-shopping relative">
                     <span
+                      id="Item_Count"
                       class="absolute top-[-10px] left-[11px] px-1.5 py-1 rounded-[50%] text-[7px] bg-[#FACC15]"
                       >0</span
                     >
@@ -149,23 +150,10 @@
           ></label>
           <ul class="menu bg-white text-base-content min-h-full w-55 p-4">
             <h3 class="text-lg font-semibold mb-3">Your Cart</h3>
-            <!-- <p class="text-center my-10 text-[15px]">
-              No items in your cart yet.
-            </p> -->
-            <div
-              class="bg-[#f0fdf4] mb-3 p-3 rounded-xl flex justify-between items-center"
-            >
-              <div>
-                <h5 class="font-medium">Mango Tree</h5>
-                <p class="text-[#8C8C8C]"><span>500</span> X <span>1</span></p>
-              </div>
-              <i class="fa-solid fa-xmark text-red-500 cursor-pointer"></i>
-            </div>
-            <div
-              class="flex justify-between pt-1.5 border-t-1 border-[#8C8C8C]"
-            >
-              <p>Total :</p>
-              <p>৳500</p>
+            <div id="Cart_Container_Menu">
+              <p class="text-center my-10 text-[15px]">
+                No items in your cart yet.
+              </p>
             </div>
           </ul>
         </div>
@@ -207,27 +195,10 @@
             class="hidden sm:block flex-1 bg-white min-h-[520px] p-3.5 rounded-2xl"
           >
             <h3 class="text-lg font-semibold mb-3">Your Cart</h3>
-            <div>
-              <!-- <p class="text-center my-10 text-[15px]">
+            <div id="Cart_Container">
+              <p class="text-center my-10 text-[15px]">
                 No items in your cart yet.
-              </p> -->
-              <div
-                class="bg-[#f0fdf4] mb-3 p-3 rounded-xl flex justify-between items-center"
-              >
-                <div>
-                  <h5 class="font-medium">Mango Tree</h5>
-                  <p class="text-[#8C8C8C]">
-                    <span>500</span> X <span>1</span>
-                  </p>
-                </div>
-                <i class="fa-solid fa-xmark text-red-500 cursor-pointer"></i>
-              </div>
-              <div
-                class="flex justify-between pt-1.5 border-t-1 border-[#8C8C8C]"
-              >
-                <p>Total :</p>
-                <p>৳500</p>
-              </div>
+              </p>
             </div>
           </div>
         </div>
